refactored css, added homepage posts in preview_boxes

--- a/css/colours.css
+++ b/css/colours.css
@@ -1,237 +1,99 @@
 /* styles unnafected by screen size */
 
-.emotional-support .content {
-  background-color: rgb(233,90,79);
-  background: 
-    url(../img/emotional_support_resized.png),
-    url(../img/emotional_support_background.png);
-  background-repeat: 
-    no-repeat,
-    repeat;
-  background-size:
-    contain,
-    auto;
-  background-position: 
-    0px 160px,
-    0 0;
-}
-
-
-.what-to-say .content {
-
+.page-template-blue .content {
   background-color: rgb(46,148,16);
   background: 
-    url(../img/emotional_support_resized.png),
-    url(../img/what_to_say_background.png);
+/*    url(../img/emotional_support_resized.png),*/
+    url(../img/blue_background.png);
   background-repeat: 
-    no-repeat,
+/*    no-repeat,*/
     repeat;
   background-size:
-    contain,
+/*    contain,*/
     auto;
   background-position: 
-    0px 160px,
+/*    0px 160px,*/
     0 0;
-
 }
 
-
-
-.practical-support .content {
+.page-template-cyan .content {
   background-color: rgb(18,176,186);
   background: 
-    url(../img/practical_support_resized.png),
-    url(../img/practical_background.png);
+/*    url(../img/practical_support_resized.png),*/
+    url(../img/cyan_background.png);
   background-repeat: 
-    no-repeat,
+/*    no-repeat,*/
     repeat;
   background-size:
-    contain,
+/*    contain,*/
     auto;
   background-position: 
-    0px 360px,
+/*    0px 360px,*/
     0 0;
-
+  background-position: 0 0, 0 0;
 }
 
-.helping-someone-else .content {
-  background-color: rgb(233,147,105);
+
+.page-template-peach .content {
+  background-color: rgb(233,90,79);
   background: 
-    url(../img/supporting_someone_else_resized.png),
-    url(../img/emotional_support_background.png);
+/*    url(../img/emotional_support_resized.png),*/
+    url(../img/peach_background.png);
   background-repeat: 
-    no-repeat,
+/*    no-repeat,*/
     repeat;
   background-size:
-    contain,
+/*    contain,*/
     auto;
   background-position: 
-    0px 160px,
+/*    0px 160px,*/
     0 0;
 }
 
 
-.talking-to-children .content {
-  background-color: rgb(46,148,168) !important;
-  background: 
-    url(../img/talking_to_children_resized.png),
-    url(../img/what_to_say_background.png) !important;
-  background-repeat: 
-    no-repeat,
-    repeat !important;
-  background-size:
-    contain,
-    auto !important;
-  background-position: 
-    0px 360px,
-    0 0 !important;
-
-}
- 
-
-
-.i-didnt-even-know-the-person .content, .witnesses .content {
-
+.page-template-red .content {
   background-color: rgb(233,90,79) !important;
   background: 
-    url(../img/talking_to_children_resized.png),
-    url(../img/witness_background.png) !important;
+/*    url(../img/talking_to_children_resized.png),*/
+    url(../img/red_background.png) !important;
   background-repeat: 
-    no-repeat,
+/*    no-repeat,*/
     repeat !important;
   background-size:
-    contain,
+/*    contain,*/
     auto !important;
   background-position: 
-    0px 45px,
+/*    0px 45px,*/
     0 0 !important;
 }
 
-.i-didnt-even-know-the-person .content {
-
+.page-template-orange .content {
+  background-color: rgb(233,147,105);
+  background: 
+/*    url(../img/supporting_someone_else_resized.png),*/
+    url(../img/orange_background.png);
+  background-repeat: 
+/*    no-repeat,*/
+    repeat;
+  background-size:
+/*    contain,*/
+    auto;
+  background-position: 
+/*    0px 160px,*/
+    0 0;
 }
 
 .your-stories .content {
   background-color: rgb(112,114,159);
-  background-image: url(../img/stories_background.png);
+  background-image: url(../img/magenta_background.png);
 }
 
-.who-we-are .content {
+.page-template-cyan .content {
   background-color: rgb(152,210,215);
-  background-image: url(../img/whoweare_background.png);
+  background-image: url(../img/cyan_background.png);
 }
 
-.page-template-default_blue .content{
+.page-template-blue .content{
   background-color: rgb(152,210,215) !important;
-  background-image: url(../img/whoweare_background.png) !important;
-}
-
-.local-services p {
-  color:rgb(120,120,120);
-  font-size: 22px;
-}
-
-/* ------------------------------ mobile first ------------------------------ */
-
-
-.support-guides .content-inner-top {
-  max-width: initial !important;
-}
-
-.support-guides  .content-top {
-  width: 75% !important;
-}
-/* below 380px wide styles */
-
-.what-to-say .what-to-say-buttons img {
-  display: inline-block;
-  width: 100% !important; 
-  height: auto;
-  padding-top: 30%; 
-}
-
-.what-to-say .what-to-say-buttons .wp-caption {
-  text-align: center;
-  width: 17% !important;
-}
-
-/* ---- */
-
-.practical-support .extra-practical-support-buttons img {
-  display: inline-block;
-  width: 90% !important; 
-  height: auto;
-  padding-top: 30%; 
-}
-
-.practical-support .extra-practical-support-buttons .wp-caption {
-  text-align: center;
-  width: 27% !important;
-}
-
-/* ---- */
-
-.who-we-are .whowearebuttons img {
-  display: inline-block;
-  width: 90% !important; 
-  height: auto;
-  padding-top: 30%; 
-}
-
-.who-we-are .whowearebuttons .wp-caption {
-  text-align: center;
-  width: 27% !important;
-}
-
-/* ---- */
-
-.i-didnt-even-know-the-person .extra_buttons img {
-  display: inline-block;
-  width: 90% !important; 
-  height: auto;
-  padding-top: 30%;
-}
-
-.i-didnt-even-know-the-person .extra_buttons .wp-caption {
-  text-align: center;
-  width: 27% !important;
-}
-
-
-
-.i-didnt-even-know-the-person .extra_buttons p {
-  text-align: center;
-}
-
-.whowearebuttons p {
-  text-align: center;
-}
-
-/* ------------------------------------------- */
-
-/* Small Devices, latest Phones */ 
-@media only screen and (min-width : 380px) {
-
-}
-
-/* ------------------------------------------- */
-
-/* Small Devices, Tablets Portrait */
-@media only screen and (min-width : 768px) {
-
-}
-
-/* ------------------------------------------- */
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px) {
-
-}
-
-/* ------------------------------------------- */
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1700px) {
-
-
+  background-image: url(../img/cyan_background.png) !important;
 }
