--- a/css/content.css
+++ b/css/content.css
@@ -147,7 +147,7 @@ h4 {
   font-size: 1.5em;
 }
 .content {
-  color: rgb(88,88,90);
+  color: rgb(128,128,128);
   text-align: left;
 }
 
@@ -239,8 +239,19 @@ h4 {
   text-align: center;
 }
 
+blockquote {
+    background: url(../img/emotional_support_resized.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+    position: relative;
+    width: 100%;
+}
 
-
+blockquote p {
+  padding: 100px 0;
+  color: white;
+}
 
 /* ------------------------------ mobile first ------------------------------ */
 
