--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Support After Suicide
+Theme Name: Support After Suicide V2
 Theme URI: 
 Author: james@catplusplus.org.uk
 Author URI: http://catplusplus.org.uk/
